Stub out TopNav.js and TopNav.css

--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -1,69 +1,82 @@
 /* Navbar container */
 .navbar {
+    box-sizing: border-box;
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(32, 32, 32);
     font-family: Arial;
-  }
-  
-  /* Links inside the navbar */
-  .navbar a {
+}
+
+/* GIF FIT header */
+.title {
     float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+    color: rgb(196, 2, 221);
+    margin-top: .5rem;
+    margin-bottom: -1rem;
+}
+
+/* Links inside the navbar */
+.navbar a {
+    /* float: left; */
+    font-size: 1.5rem;
+    color: rgb(0, 255, 179);
+    padding: 1rem 1rem;
     text-decoration: none;
-  }
-  
-  /* The dropdown container */
-  .dropdown {
+}
+
+/* The dropdown container */
+.dropdown {
     float: left;
     overflow: hidden;
-  }
-  
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    font-size: 16px;
+    /* border: solid 1px red; */
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+    font-size: 1rem;
     border: none;
     outline: none;
-    color: white;
-    padding: 14px 16px;
+    color:rgb(0, 255, 179);
+    /* margin-top: 18px; */
+    margin-left: 3rem;
+    padding: 1rem 1rem;
     background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-  }
-  
-  /* Add a red background color to navbar links on hover */
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
+    /* margin: 0; */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: rgb(0, 255, 179);
+    color: rgb(32, 32, 32);
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
+    margin-left: 4rem;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
     float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-  }
-  
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
     background-color: #ddd;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
     display: block;
-  }
+}
