--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -67,9 +67,9 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     min-width: 160px;
-    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.425);
     z-index: 1;
     border: solid 2px rgb(141, 39, 209);
 }
