--- a/src/stylesheets/Responsive.css
+++ b/src/stylesheets/Responsive.css
@@ -1,3 +1,5 @@
-@media only screen and (min-width: 750px) {
-    
-  }
+@media only screen and (max-width: 800px) {
+    .top-nav {
+        display: none;
+    }
+}
