--- a/src/stylesheets/Responsive.css
+++ b/src/stylesheets/Responsive.css
@@ -2,4 +2,26 @@
     .top-nav {
         display: none;
     }
+
+    .sidenav {
+        display: block;
+    }
+
+    .hamburger {
+        display: block;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .top-nav {
+        display: block;
+    }
+
+    .sidenav {
+        display: none;
+    }
+
+    .hamburger {
+        display: none;
+    }
 }
