Update SideNav.css and .js

--- a/src/stylesheets/Responsive.css
+++ b/src/stylesheets/Responsive.css
@@ -7,8 +7,8 @@
         display: block;
     }
 
-    .hamburger {
-        display: block;
+    .sidenav-wrapper {
+        display: flex;
     }
 }
 
@@ -21,7 +21,7 @@
         display: none;
     }
 
-    .hamburger {
+    .sidenav-wrapper {
         display: none;
     }
 }
