--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -6,7 +6,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(39, 4, 119);
+    background-color: rgb(30, 2, 83);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -43,13 +43,14 @@
     margin-left: .5rem;
     cursor: pointer;
     font-size: 2rem;
-    margin-top: 36px;
-    padding-bottom: 3px;
+    margin-top: 30px;
+    padding-bottom: 7px;
     color: rgb(51, 8, 150);
   }
 
   .sidenav-title {
-    /* margin-top: 40px; */
-    margin-left: 1rem;
+    position: fixed;
+    margin-top: 36px;
+    margin-left: 3rem;
     color: rgb(221, 2, 130);
   }
