--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -92,3 +92,26 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+/* select grid */
+
+.select-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.select-button {
+    cursor: pointer;
+    height: 3rem;
+    font-size: 1.5rem;
+    color: rgb(51, 8, 150);
+    background-color: white;
+    margin: .5rem;
+    border: 1px solid rgb(51, 8, 150);
+    /* outline: none; */
+}
+
+.select-button:hover {
+    background-color: rgb(51, 8, 150);
+    color: white;
+}
