--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -115,3 +115,8 @@
     background-color: rgb(51, 8, 150);
     color: white;
 }
+
+.select-button:focus {     
+    background-color: rgb(51, 8, 150);
+    color: white;    
+}
