--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -113,7 +113,7 @@
     margin: .75rem;
     border: 2px solid rgb(51, 8, 150);
     border-radius: 10px;
-    /* outline: none; */
+    outline: none;
 }
 
 .select-button:hover {
@@ -121,7 +121,14 @@
     color: white;
 }
 
-.select-button:focus {     
-    background-color: rgb(51, 8, 150);
-    color: white;    
+.selected-button {   
+    cursor: pointer;
+    height: 3rem;
+    font-size: 1.5rem;
+    margin: .75rem;
+    background-color: rgb(94, 38, 224);
+    color: white;
+    border: 2px solid rgb(51, 8, 150);
+    border-radius: 10px;
+    outline: none;
 }
