--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -10,6 +10,8 @@
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    display: grid;
+    grid-template-columns: 1fr;
   }
   
   .sidenav a {
