--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -10,50 +10,54 @@
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  
-  .sidenav a {
-    white-space: nowrap;
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 20px;
-    color: white;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-  
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 40px;
-    margin-left: 50px;
   }
 
-  .sidenav-wrapper {
-    font-family: Arial;
-    display: flex;
-    border-bottom: 2px solid rgb(51, 8, 150);
-  }
+.sidenav-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-left: 4rem;
+}
+  
+.sidenav a {
+  white-space: nowrap;
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  display: block;
+  transition: 0.3s;
+}
 
-  .hamburger {
-    margin-left: 1.5rem;
-    cursor: pointer;
-    font-size: 2rem;
-    margin-top: 30px;
-    padding-bottom: 7px;
-    color: rgb(51, 8, 150);
-  }
+.sidenav a:hover {
+  color: #f1f1f1;
+}
 
-  .sidenav-title {
-    position: fixed;
-    margin-top: 36px;
-    margin-left: 4rem;
-    color: rgb(221, 2, 130);
-  }
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 40px;
+  margin-left: 50px;
+}
+
+.sidenav-hamburger-wrapper {
+  font-family: Arial;
+  display: flex;
+  border-bottom: 2px solid rgb(51, 8, 150);
+}
+
+.hamburger {
+  margin-left: 1.5rem;
+  cursor: pointer;
+  font-size: 2rem;
+  margin-top: 30px;
+  padding-bottom: 7px;
+  color: rgb(51, 8, 150);
+}
+
+.sidenav-title {
+  position: fixed;
+  margin-top: 36px;
+  margin-left: 4rem;
+  color: rgb(221, 2, 130);
+}
