--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -97,9 +97,8 @@
     display: block;
 }
 
-/* select grid */
-
-.select-grid {
+/* select exercise number grid */
+.select-exercise-number-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: .5rem;
@@ -133,4 +132,12 @@
     border: 2px solid rgb(51, 8, 150);
     border-radius: 10px;
     outline: none;
+}
+
+/* select exercise time grid */
+.select-exercise-time-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: .5rem;
+    padding: .5rem;
 }
