--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -3,13 +3,13 @@
     background-color: white;
     overflow: hidden;
     font-family: Arial;
-    border-bottom: 2px solid rgb(51, 8, 150);
+    border-bottom: 2px solid var(--dark-purple);
 }
 
 /* GIF FIT header */
 .title {
     float: left;
-    color: rgb(221, 2, 130);
+    color: var(--bright-pink);
     margin-top: 2.25rem;
     margin-bottom: -1rem;
     margin-left: 2rem;
@@ -29,10 +29,10 @@
     margin-top: 2rem;
     font-size: 1rem;
     font-weight: bold;
-    color: rgb(51, 8, 150);
+    color: var(--dark-purple);
     padding: 1rem 1rem;
     text-decoration: none;
-    border-left: 2px solid rgb(51, 8, 150);
+    border-left: 2px solid var(--dark-purple);
 }
 
 /* The dropdown container */
@@ -49,7 +49,7 @@
     font-weight: bold;
     border: none;
     outline: none;
-    color:rgb(51, 8, 150);
+    color:var(--dark-purple);
     padding: 1rem 1rem;
     background-color: inherit;
     font-family: inherit;
@@ -58,8 +58,8 @@
 
 /* Add a red background color to navbar links on hover */
 .top-nav a:hover, .dropdown:hover .dropbtn {
-    background-color: rgb(51, 8, 150);
-    color: white;
+    background-color: var(--dark-purple);
+    color: var(--white);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
@@ -68,11 +68,11 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #ffffff;
+    background-color: var(--white);
     min-width: 160px;
-    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.425);
+    box-shadow: var(--black-shadow);
     z-index: 1;
-    border: solid 2px rgb(51, 8, 150);
+    border: solid 2px var(--dark-purple);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -80,7 +80,7 @@
 /* Links inside the dropdown */
 .dropdown-content a {
     float: none;
-    color: black;
+    color: var(--black);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -95,49 +95,4 @@
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
-}
-
-/* select exercise number grid */
-.select-exercise-number-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: .5rem;
-    padding: .5rem;
-}
-
-.select-button {
-    cursor: pointer;
-    height: 36px;
-    font-size: 1.25rem;
-    color: rgb(51, 8, 150);
-    background-color: white;
-    /* margin: .75rem; */
-    border: 2px solid rgba(51, 8, 150, 0.5);
-    border-radius: 10px;
-    outline: none;
-}
-
-.select-button:hover {
-    background-color: rgba(51, 8, 150, 0.5);
-    color: white;
-}
-
-.selected-button {   
-    cursor: pointer;
-    height: 36px;
-    font-size: 1.25rem;
-    /* margin: .75rem; */
-    background-color: rgb(51, 8, 150);
-    color: white;
-    border: 2px solid rgb(51, 8, 150);
-    border-radius: 10px;
-    outline: none;
-}
-
-/* select exercise time grid */
-.select-exercise-time-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: .5rem;
-    padding: .5rem;
 }
