--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -9,7 +9,7 @@
 /* GIF FIT header */
 .title {
     float: left;
-    color: var(--bright-pink);
+    color: var(--purple-pink);
     margin-top: 2.25rem;
     margin-bottom: -1rem;
     margin-left: 2rem;
