--- a/src/stylesheets/NavSelectGrids.css
+++ b/src/stylesheets/NavSelectGrids.css
@@ -1,5 +1,5 @@
 /* select exercise number grid */
-.select-exercise-number-grid {
+.select-number-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: .5rem;
@@ -34,7 +34,7 @@
 }
 
 /* select exercise time grid */
-.select-exercise-time-grid {
+.select-time-grid {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: .5rem;
