Change --kanit to --prompt

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -9,7 +9,7 @@
 
 :root {
   /* fonts */
-  --kanit: 'Prompt', sans-serif;
+  --prompt: 'Prompt', sans-serif;
 
   /* neutrals */
   --black: black;
