--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -1,5 +1,5 @@
 .sidenav {
-    font-family: var(--kanit);
+    font-family: var(--prompt);
     height: 100%;
     width: 0;
     position: fixed;
@@ -41,7 +41,7 @@
 }
 
 .sidenav-hamburger-wrapper {
-  font-family: var(--kanit);
+  font-family: var(--prompt);
   display: flex;
   border-bottom: 2px solid var(--dark-purple);
 }
