--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -1,15 +1,16 @@
 /* Navbar container */
 .top-nav {
-    background-color: white;
+    background-color: var(--dark-purple);
+    color: white;
     overflow: hidden;
     font-family: var(--prompt);
-    border-bottom: 2px solid var(--dark-purple);
+    border-bottom: 2px solid var(--white);
 }
 
 /* GIF FIT header */
 .title {
     float: left;
-    color: var(--purple-pink);
+    color: var(--sea-blue);
     margin-top: 30px;
     margin-bottom: -1rem;
     margin-left: 2rem;
@@ -29,10 +30,10 @@
     margin-top: 2rem;
     font-size: 1rem;
     font-weight: bold;
-    color: var(--dark-purple);
+    color: var(--white);
     padding: 1rem 1rem;
     text-decoration: none;
-    border-left: 2px solid var(--dark-purple);
+    border-left: 2px solid var(--sea-blue);
 }
 
 /* The dropdown container */
@@ -49,7 +50,7 @@
     font-weight: bold;
     border: none;
     outline: none;
-    color: var(--dark-purple);
+    color: var(--white);
     padding: 1rem 1rem;
     background-color: inherit;
     font-family: inherit;
@@ -58,8 +59,8 @@
 
 /* Add a red background color to navbar links on hover */
 .top-nav a:hover, .dropdown:hover .dropbtn {
-    background-color: var(--dark-purple);
-    color: var(--white);
+    background-color: var(--sea-blue);
+    color: var(--dark-purple);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
@@ -72,7 +73,7 @@
     min-width: 160px;
     box-shadow: var(--black-shadow);
     z-index: 1;
-    border: solid 2px var(--dark-purple);
+    border: solid 2px var(--white);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -80,7 +81,7 @@
 /* Links inside the dropdown */
 .dropdown-content a {
     float: none;
-    color: var(--black);
+    color: var(--dark-purple);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
