--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -73,7 +73,9 @@
     min-width: 160px;
     box-shadow: var(--black-shadow);
     z-index: 1;
-    border: solid 2px var(--white);
+    /* border-bottom: solid 2px var(--medium-purple);
+    border-left: solid 2px var(--medium-purple);
+    border-right: solid 2px var(--medium-purple); */
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
