--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -2,7 +2,6 @@
     font-family: var(--prompt);
     height: 100%;
     width: 0;
-    position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
@@ -41,6 +40,9 @@
 }
 
 .sidenav-hamburger-wrapper {
+  position: sticky;
+  background-color: white;
+  top: 0;
   font-family: var(--prompt);
   display: flex;
   border-bottom: 2px solid var(--dark-purple);
