--- a/src/stylesheets/Responsive.css
+++ b/src/stylesheets/Responsive.css
@@ -1,9 +1,5 @@
 @media only screen and (max-width: 800px) {
-    .App {
-        margin: 0;
-    }
-    
-    .top-nav {
+  .top-nav {
         display: none;
     }
 
@@ -40,9 +36,18 @@
     }
 
     .home-grid-wrapper {
-        display: flex;
-        flex-direction: column;
-        margin: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin: 0;
+    }
+
+    .welcome-title {
+        width: 100%;
+    }
+
+    .welcome-description {
+        width: 100%;
     }
 
     .display-selection-title {
@@ -50,6 +55,10 @@
     }
 
     .display-selection-description {
+        width: 100%;
+    }
+
+    .display-selection-time {
         width: 100%;
     }
     
