--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -1,4 +1,5 @@
 .sidenav {
+  position: fixed;
   font-family: var(--prompt);
   height: 100%;
   width: 0;
@@ -40,11 +41,13 @@
 }
 
 .sidenav-hamburger-wrapper {
-  background-color: white;
+  position: sticky;
   top: 0;
+  left: 0;
+  background-color: var(--dark-purple);
+  color: var(--white);
   font-family: var(--prompt);
   display: flex;
-  border-bottom: 2px solid var(--dark-purple);
 }
 
 .hamburger {
@@ -53,12 +56,11 @@
   font-size: 2rem;
   margin-top: 30px;
   padding-bottom: 7px;
-  color: var(--dark-purple);
+  color: var(--white);
 }
 
 .sidenav-title {
-  /* position: fixed; */
   margin-top: 30px;
-  margin-left: 4rem;
-  color: var(--purple-pink);
+  margin-left: 1rem;
+  color: var(--sea-blue);
 }
