--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -1,10 +1,9 @@
 /* Navbar container */
 .top-nav {
     background-color: var(--dark-purple);
-    color: white;
+    color: var(--white);
     overflow: hidden;
     font-family: var(--prompt);
-    border-bottom: 2px solid var(--white);
 }
 
 /* GIF FIT header */
@@ -74,8 +73,6 @@
     box-shadow: var(--black-shadow);
     z-index: 1;
     border-bottom: solid 3px var(--medium-purple);
-    /* border-left: solid 2px var(--medium-purple); */
-    /* border-right: solid 2px var(--medium-purple); */
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
