--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -39,7 +39,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: 0;
-  /* margin: 5rem; */
+  margin-top: 5rem;
   margin-left: 5rem;
   margin-right: 5rem;
 }
@@ -77,7 +77,7 @@
   font-size: 1.5rem;
   padding-bottom: 8px;
   border-bottom: 1px solid var(--dark-purple-50-opacity);
-  width: 33%;
+  width: 50%;
 }
 
 .display-selection-description {
@@ -92,5 +92,16 @@
   font-size: 1.5rem;
   padding-top: 8px;
   border-top: 1px solid var(--dark-purple-50-opacity);
-  width: 33%;
+  width: 50%;
+}
+
+.workout-btn {
+  font-family: var(--sans-pro);
+  background-color: var(--sea-blue);
+  color: var(--dark-purple);
+  margin-left: 1rem;
+  font-size: 1rem;
+  border: 1px solid var(--dark-purple);
+  border-radius: 5px;
+  cursor: pointer;
 }
