--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -33,10 +33,11 @@
 }
 
 .sidenav .closebtn {
+  font-family: var(--sans-pro);
   position: absolute;
   top: 0;
   right: 25px;
-  font-size: 40px;
+  font-size: 50px;
   margin-left: 50px;
 }
 
@@ -47,7 +48,7 @@
   background-color: var(--dark-purple);
   color: var(--white);
   font-family: var(--prompt);
-  display: flex;
+  /* display: flex; */
 }
 
 .hamburger {
@@ -55,7 +56,7 @@
   cursor: pointer;
   font-size: 2rem;
   margin-top: 30px;
-  padding-bottom: 7px;
+  /* padding-bottom: 7px; */
   color: var(--white);
 }
 
