--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 .App {
-  margin: 0;
+  margin-top: -1rem;
 }
 
 :root {
