--- a/src/stylesheets/TopNav.css
+++ b/src/stylesheets/TopNav.css
@@ -1,5 +1,8 @@
 /* Navbar container */
 .top-nav {
+    position: sticky;
+    top: 0;
+    left: 0;
     background-color: var(--dark-purple);
     color: var(--white);
     overflow: hidden;
