Update .workout-btn with bottom-border and :hover class

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -97,11 +97,17 @@
 
 .workout-btn {
   font-family: var(--sans-pro);
-  background-color: var(--sea-blue);
+  background-color: var(--medium-purple);
   color: var(--dark-purple);
   margin-left: 1rem;
   font-size: 1rem;
-  border: 1px solid var(--dark-purple);
+  border: none;
+  /* border: 1px solid var(--dark-purple); */
+  border-bottom: 2px solid var(--dark-purple);
   border-radius: 5px;
   cursor: pointer;
+}
+
+.workout-btn:hover {
+  background-color: var(--sea-blue);
 }
