--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
+body {
+  background-color: #ffffff;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(186,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23cab4fd'/%3E%3Cstop offset='1' stop-color='%23ffffff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='24' height='24' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='12' cy='12' r='12'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.1'/%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
+}
+
 .App {
   margin-top: -1rem;
 }
@@ -102,7 +109,6 @@
   margin-left: 1rem;
   font-size: 1rem;
   border: none;
-  /* border: 1px solid var(--dark-purple); */
   border-bottom: 2px solid var(--dark-purple);
   border-radius: 5px;
   cursor: pointer;
