--- a/src/stylesheets/Responsive.css
+++ b/src/stylesheets/Responsive.css
@@ -1,5 +1,9 @@
 @media only screen and (max-width: 800px) {
-  .top-nav {
+    .App {
+        margin: -1rem
+    }
+
+    .top-nav {
         display: none;
     }
 
@@ -38,8 +42,8 @@
     .home-grid-wrapper {
         display: grid;
         grid-template-columns: 1fr;
-        width: 100%;
-        margin: 0;
+        width: 90%;
+        margin: 1rem;
     }
 
     .welcome-title {
