--- a/src/stylesheets/Responsive.css
+++ b/src/stylesheets/Responsive.css
@@ -42,8 +42,8 @@
     .home-grid-wrapper {
         display: grid;
         grid-template-columns: 1fr;
-        width: 90%;
-        margin: 1rem;
+        width: 100%;
+        margin: 0;
     }
 
     .welcome-title {
