--- a/src/stylesheets/NavSelectGrids.css
+++ b/src/stylesheets/NavSelectGrids.css
@@ -18,7 +18,7 @@
 }
 
 .select-button:hover {
-    background-color: var(--medium-purple);
+    background-color: var(--light-blue);
     color: var(--white);
 }
 
