--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -131,11 +131,14 @@ background-size: cover;
   margin-left: 1rem;
   font-size: 1rem;
   border: none;
-  border-bottom: 2px solid var(--purple);
+  /* border-bottom: 2px solid var(--medium-purple); */
   border-radius: 5px;
   cursor: pointer;
 }
 
 .workout-btn:hover {
-  background-color: var(--medium-purple);
+  background-color: var(--white);
+  color: var(--blue);
+  font-weight: bold;
+  /* border-bottom: 2px solid var(--blue); */
 }
