Update DumbbellButtonGrid and create .include-dumbbells

--- a/src/stylesheets/NavSelectGrids.css
+++ b/src/stylesheets/NavSelectGrids.css
@@ -40,3 +40,11 @@
     grid-gap: .5rem;
     padding: .5rem;
 }
+
+/* include dumbbells grid */
+.include-dumbbells {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: .5rem;
+    padding: .5rem;
+}
