--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -142,3 +142,36 @@ body {
   font-weight: bold;
   /* border-bottom: 2px solid var(--blue); */
 }
+
+/* Preview Gif Grid */
+.preview-gif-grid-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.preview-gif-card {
+  background-color: white;
+  border: 1px solid var(--blue);
+  border-radius: 5px;
+  width: 100px;
+}
+
+.preview-gif-text {
+  font-size: 10px;
+  padding-left: 2px;
+  padding-right: 2px;
+  text-align: center;
+  margin-top: 0;
+}
+
+.preview-gif-card:hover {
+  transform: scale(2.5);
+}
+
+.preview-gifs-gif {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  width: 100%;
+  height: 62px
+}
