--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -155,14 +155,7 @@ body {
   border: 1px solid var(--blue);
   border-radius: 5px;
   width: 100px;
-}
-
-.preview-gif-text {
-  font-size: 10px;
-  padding-left: 2px;
-  padding-right: 2px;
-  text-align: center;
-  margin-top: 0;
+  padding: 5px;
 }
 
 .preview-gif-card:hover {
@@ -174,4 +167,14 @@ body {
   border-top-right-radius: 5px;
   width: 100%;
   height: 62px
+}
+
+.preview-gif-text {
+  font-family: var(--sans-pro);
+  color: var(--blue);
+  font-size: 12px;
+  /* padding-left: 2px;
+  padding-right: 2px; */
+  text-align: center;
+  margin-top: 0;
 }
