--- a/src/stylesheets/Modal.css
+++ b/src/stylesheets/Modal.css
@@ -1,58 +1,20 @@
-/* Greeting Modal Container */
-#greeting-modal {
-    visibility: hidden;
-    opacity: 0;
-    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-/* Greeting Modal Container - when open */
-#greeting-modal:target {
-    visibility: visible;
-    opacity: 1;
-}
-
-/* Greeting Modal */
-#greeting-modal .modal {
-    opacity: 0;
-    transform: translateY(-1rem);
-    transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
-    transition-delay: .2s;
-}
-
-/* Greeting Modal - when open */
-#greeting-modal:target .modal {
-    transform: translateY(0);
-    opacity: 1;
-}
-
-/* Modal Container Styles */
-.modal-container {
+.Modal {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Modal Background Styles */
-.modal-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, .2);
-}
-
-/* Modal Body Styles */
-.modal {
-    z-index: 1;
+    z-index: 500;
     background-color: white;
-    width: 80%;
-    max-width: 500px;
-    padding: 1rem;
-    border-radius: 8px;
+    width: 70%;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px black;
+    padding: 16px;
+    left: 15%;
+    top: 30%;
+    box-sizing: border-box;
+    transition: all 0.3s ease-out;
+}
+
+@media (min-width: 600px) {
+    .Modal {
+        width: 500px;
+        left: calc(50% - 250px);
+    }
 }
