--- a/src/stylesheets/Modal.css
+++ b/src/stylesheets/Modal.css
@@ -7,41 +7,60 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 98;
+    z-index: 99;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.8);
   }
   
   .modal {
     position: relative;
-    z-index: 99;
+    z-index: 100;
     width: 100%;
-    max-width: 20rem;
+    max-width: 600px;
     max-height: 100%;
     margin: 0 auto;
   }
   
   .modal-close {
     position: absolute;
-    top: -1.5rem;
-    right: 0;
-    padding: 5px;
+    top: 8px;
+    right: 8px;
+    font-weight: bold;
+    font-size: 2.5rem;
     border: 0;
     -webkit-appearance: none;
     background: none;
-    color: white;
+    color: lightgray;
     cursor: pointer;
+  }
+
+  .modal-close:hover {
+    color: var(--blue);
   }
   
   .modal-body {
-    padding: 1.25rem 1.5rem;
-    border-radius: 4px;
+    padding: 3rem;
+    border-radius: 10px;
     background-color: white;
   }
 
-  /* Overlay Transitions */
+/* Modal Gif Styles */
+.modal-gifs-gif {
+  border-radius: 5px;
+  width: 100%;
+}
 
+.modal-gif-text {
+  font-family: var(--sans-pro);
+  color: var(--blue);
+  font-size: 20px;
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: -1rem;
+}
+
+/* Overlay Transitions */
 .modal-transition-enter .overlay {
     opacity: 0;
   }
