--- a/src/stylesheets/Modal.css
+++ b/src/stylesheets/Modal.css
@@ -16,7 +16,7 @@
   .modal {
     position: relative;
     z-index: 100;
-    width: 100%;
+    width: 90%;
     max-width: 600px;
     max-height: 100%;
     margin: 0 auto;
@@ -24,7 +24,7 @@
   
   .modal-close {
     position: absolute;
-    top: 8px;
+    top: 2px;
     right: 8px;
     font-weight: bold;
     font-size: 2.5rem;
@@ -40,7 +40,8 @@
   }
   
   .modal-body {
-    padding: 3rem;
+    padding: 1rem;
+    padding-top: 3rem;
     border-radius: 10px;
     background-color: white;
   }
@@ -51,13 +52,20 @@
   width: 100%;
 }
 
-.modal-gif-text {
+.modal-gif-title {
   font-family: var(--sans-pro);
   color: var(--blue);
   font-size: 20px;
+  font-weight: bold;
   text-align: center;
   margin-top: 1rem;
-  margin-bottom: -1rem;
+}
+
+.modal-gif-text {
+  font-family: var(--sans-pro);
+  color: var(--blue);
+  font-size: 1.1rem;
+  margin-top: 1rem;
 }
 
 /* Overlay Transitions */
