Add :hover to .preview-gif-card

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -155,10 +155,15 @@ body {
 
 .preview-gif-card {
   background-color: white;
-  /* border: 1px solid var(--blue); */
   border-radius: 5px;
   padding: 5px;
   cursor: pointer;
+  color: var(--blue);
+}
+
+.preview-gif-card:hover {
+  background-color: var(--blue);
+  color: var(--white);
 }
 
 .preview-gifs-gif {
@@ -169,7 +174,6 @@ body {
 
 .preview-gif-text {
   font-family: var(--sans-pro);
-  color: var(--blue);
   font-size: 12px;
   text-align: center;
   margin-top: 0;
